export const snapshot = {};

snapshot[`getAllBlocks returns all blocks 1`] = `
{
  count: 19,
  ids: [
    "callout",
    "details",
    "heading",
    "quote",
    "code-block",
    "image",
    "columns-2",
    "columns-3",
    "divider",
    "spacer",
    "cards",
    "card",
    "site-link",
    "youtube",
    "twitter",
    "pdf",
    "embed",
    "button",
    "tabs",
  ],
}
`;

snapshot[`getBlocksByCategory text returns text blocks 1`] = `
[
  "callout",
  "details",
  "heading",
  "quote",
  "code-block",
]
`;

snapshot[`getBlocksByCategory media returns media blocks 1`] = `
[
  "image",
]
`;

snapshot[`getBlocksByCategory embed returns embed blocks 1`] = `
[
  "youtube",
  "twitter",
  "pdf",
  "embed",
]
`;

snapshot[`searchBlocks video finds youtube 1`] = `
[
  "youtube",
]
`;

snapshot[`searchBlocks callout finds callout 1`] = `
[
  "callout",
  "quote",
]
`;

snapshot[`getAllPatterns returns patterns 1`] = `
{
  count: 6,
  ids: [
    "hero-section",
    "feature-grid",
    "faq",
    "testimonial",
    "cta-section",
    "comparison-columns",
  ],
}
`;

snapshot[`searchPatterns hero finds hero pattern 1`] = `
[
  "hero-section",
]
`;
